ADd setCurrentDeployment to API
