# api/v1/restapi/operations/deployments/set_current_deployment_responses.go
@@ -1,0 +1,82 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package deployments
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/signalcd/signalcd/api/v1/models"
+)
+
+// SetCurrentDeploymentOKCode is the HTTP code returned for type SetCurrentDeploymentOK
+const SetCurrentDeploymentOKCode int = 200
+
+/*SetCurrentDeploymentOK OK
+
+swagger:response setCurrentDeploymentOK
+*/
+type SetCurrentDeploymentOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Deployment `json:"body,omitempty"`
+}
+
+// NewSetCurrentDeploymentOK creates SetCurrentDeploymentOK with default headers values
+func NewSetCurrentDeploymentOK() *SetCurrentDeploymentOK {
+
+	return &SetCurrentDeploymentOK{}
+}
+
+// WithPayload adds the payload to the set current deployment o k response
+func (o *SetCurrentDeploymentOK) WithPayload(payload *models.Deployment) *SetCurrentDeploymentOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the set current deployment o k response
+func (o *SetCurrentDeploymentOK) SetPayload(payload *models.Deployment) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SetCurrentDeploymentOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// SetCurrentDeploymentInternalServerErrorCode is the HTTP code returned for type SetCurrentDeploymentInternalServerError
+const SetCurrentDeploymentInternalServerErrorCode int = 500
+
+/*SetCurrentDeploymentInternalServerError internal server error
+
+swagger:response setCurrentDeploymentInternalServerError
+*/
+type SetCurrentDeploymentInternalServerError struct {
+}
+
+// NewSetCurrentDeploymentInternalServerError creates SetCurrentDeploymentInternalServerError with default headers values
+func NewSetCurrentDeploymentInternalServerError() *SetCurrentDeploymentInternalServerError {
+
+	return &SetCurrentDeploymentInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *SetCurrentDeploymentInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
