# swagger.yaml
@@ -39,6 +39,18 @@ paths:
           description: "OK"
           schema:
             $ref: '#/definitions/deployment'
+    post:
+      tags:
+        - "deployments"
+      summary: "Schedule a new deployment"
+      operationId: "setCurrentDeployment"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: '#/definitions/deployment'
+        500:
+          description: "internal server error"
   /pipelines:
     get:
       tags:
